# reddit_wrapper_webapp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml  package-lock.json  pyproject.toml
backend/: __init__.py  __main__.py  utils.py
backend/api/: __main__.py
backend/api/routers/reddit/: __init__.py  router.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: index.html
frontend/src/static/js/: main.js
src/reddit_wrapper/backend/: __main__.py
src/reddit_wrapper/backend/api/: __main__.py
src/reddit_wrapper/backend/api/routers/: reddit.py
src/reddit_wrapper/backend/api/routers/reddit/: response_types.py  router.py
src/reddit_wrapper/backend/session_manager/: __init__.py
