[project]
name = "reddit-wrapper-webapp"
version = "0.1.0"
description = ""
authors = [
    {name = "p0lygun", email = "solankivibhakar82@gmail.com"},
]
dependencies = [
    "fastapi>=0.101.1",
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.3",
]
[tool.pdm.scripts]
api = {call= "reddit_wrapper.backend.__main__:deploy"}
